# tflmlib_vision

./: README.md
TFLM_PersonDetection/: .cproject  .project  .xxproject  Makefile  license.txt
TFLM_PersonDetection/tensorflow/core/public/: session.h
TFLM_PersonDetection/tensorflow/lite/c/: builtin_op_data.h
TFLM_PersonDetection/tensorflow/lite/core/api/: flatbuffer_conversions.cc  flatbuffer_conversions.h
TFLM_PersonDetection/tensorflow/lite/micro/: all_ops_resolver.cc  micro_allocator.cc  micro_string.cc
TFLM_PersonDetection/tensorflow/lite/micro/kernels/: activations.cc  conv.cc  (+3 more)
TFLM_PersonDetection/tensorflow/lite/micro/kernels/xtensa_vision/: CMakeLists.txt  conv.cc  conv.h  conv2D.cc  conv2D_opt.cc  conv2D_ref.cc  conv2D_xi.cc  conv_common.cc  depthwiseConv2D.cc  depthwiseConv2D_opt.cc  depthwiseConv2D_ref.cc  depthwiseConv2D_xi.cc  depthwise_conv.cc  depthwise_conv.h  depthwise_conv_common.cc  pool.cc  pool_opt.cc  pool_ref.cc  pool_xi.cc  pooling.cc  utils.cc  utils.h
TFLM_PersonDetection/tensorflow/lite/micro/kernels/xtensa_vision/include/: arithm_scalar_aligned.h  arithm_scalar_unaligned.h  arithm_vector_aligned.h  arithm_vector_unaligned.h  avg_poolingAQuantized.h  cnnrt.h  cnnrt_debug.h  cnnrt_dna100.h  cnnrt_helpers.h  cnnrt_perf.h  extend_edge.h  fill_tile.h  flk_common.h  flk_conv.h  vision_api.h  xi_api_ref.h  xi_cnn.h  xi_core.h  xi_tile3d_manager.h  xi_version.h  xi_video_api.h
TFLM_PersonDetection/tensorflow/lite/micro/kernels/xtensa_vision/lib_common/: cnncmp.cc  cnnlsp.cc  cnnrt.cc
TFLM_PersonDetection/tensorflow/lite/schema/: schema_generated.h  schema_utils.cc
archive/xi_annlib_vision_p6/: conv2D.cc  conv2D_xi.cc  depthwiseConv2D.cc  pool.cc  pool_opt.cc  utils.cc  utils.h
archive/xi_annlib_vision_p6/include/: XtensaOp.h  arithm.h  arithm_scalar_aligned.h  avg_poolingAQuantized.h  cnnrt_arena.h  cnnrt_compression.h  cnnrt_compression_support.h  flk_common.h  vision_api.h  xi_api_ref.h  xi_cnn.h  xi_cnn_api.h  xi_cnn_api_ref.h  xi_drawing_api.h
archive/xi_annlib_vision_p6/lib_common/: cnncmp.cc  cnndebug.cc  cnnperf.cc  cnnrt.cc  cnnrtcompression.cc  cnnrtxmp.cc
xi_tflmlib_vision_p6/: README
xi_tflmlib_vision_p6/flk/include/: flk_common.h  flk_concat.h  flk_conv.h  flk_eltwiseOp.h  flk_pool.h  flk_reduce.h  flk_softmax.h  utils.h  vision_api.h
xi_tflmlib_vision_p6/flk/src/: convUtils.cc  flk_concat.cc  flk_conv.cc  flk_depthwiseConv.cc  flk_eltwiseOp.cc  flk_pool.cc  flk_reduce4D.cc  flk_softmax.cc  utils.cc  xiPad.cc  xiReduce.cc  xiReshape.cc  xiadd.cc  xiconv.cc  xidepthwiseConv.cc  xifullyconnected.cc  xipool.cc  xisoftmax.cc
xi_tflmlib_vision_p6/kernels/include/: extend_edge.h  xi_cnn.h  xi_cnn_api.h  xi_config_api.h  xi_core_api.h
xi_tflmlib_vision_p6/kernels/src/: addA.cc  addA.h  avgPoolA.cc  avgPoolA_quantized.cc  avg_poolingA.h  avg_poolingAQuantized.h  conv2D_xi.cc  datatransform.cc  depthwiseConv2D_xi.cc  fcA.cc  fcA.h  maxpoolA.cc  maxpoolA.h  reduceA.cc  reduceA.h  softmaxA.cc  softmaxA.h  utilfunctions_xi.cc
xi_tflmlib_vision_p6/runtime/include/: cnnrt.h  cnnrt_helpers.h  cnnrt_perf.h  cnnrt_xi.h  cnnrt_xi_p6.h
xi_tflmlib_vision_p6/runtime/src/: cnnarena.cc  cnndebug.cc  cnnlsp.cc  cnnperf.cc  cnnrt.cc
(+58 files in other folders)
